--- a/css/breakout.css
+++ b/css/breakout.css
@@ -20,3 +20,49 @@ canvas {
     display: block;
     border-radius: 5px;
 }
+
+h1 {
+    font-size: 45px;
+    color: #fff;
+}
+
+.btn {
+    cursor: pointer;
+    border: none;
+    padding: 10px 20px;
+    background: #9871a3;
+    color: white;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background:#8865a8;
+}
+
+.btn:active {
+    transform: scale(0.98);
+}
+
+.rules-btn {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+
+.rules {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #d3b7ed;
+    color: white;
+    min-height: 100vh;
+    width: 400px;
+    padding: 9px 9px;
+    line-height: 1.5;
+    transform: translateX(-400px);
+    transition: transform 1s ease-in-out;
+}
+
+.rules.show {
+    transform: translateX(0);
+}
