--- a/css/breakout.css
+++ b/css/breakout.css
@@ -59,7 +59,7 @@ h1 {
     width: 400px;
     padding: 9px 9px;
     line-height: 1.5;
-    transform: translateX(-400px);
+    /* transform: translateX(-400px); */
     transition: transform 1s ease-in-out;
 }
 
