--- a/css/breakout.css
+++ b/css/breakout.css
@@ -53,13 +53,13 @@ h1 {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #d3b7ed;
+    background-color: #c2a4de;
     color: white;
     min-height: 100vh;
     width: 400px;
     padding: 9px 9px;
     line-height: 1.5;
-    transform: translateX(-400px);
+    /* transform: translateX(-400px); */
     transition: transform 1s ease-in-out;
 }
 
