--- a/css/breakout.css
+++ b/css/breakout.css
@@ -29,7 +29,7 @@ h1 {
     cursor: pointer;
     border: none;
     padding: 10px 20px;
-    background: #9871a3;
+    background: #5691D4;
     color: white;
     border-radius: 5px;
 }
@@ -52,7 +52,7 @@ h1 {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #c2a4de;
+    background-color: #5691D4;
     color: white;
     min-height: 100vh;
     width: 400px;
