--- a/css/breakout.css
+++ b/css/breakout.css
@@ -67,6 +67,10 @@ h1 {
     transition: transform 1s ease-in-out;
 }
 
+.rules .four {
+    height: 50vh;
+    width: 300px;
+}
 
 .rules.show {
     transform: translateX(0);
