Mon, Apr 8, 2024, 3:11 PM -07:00

--- a/css/insect.css
+++ b/css/insect.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Kosugi&family=Montserrat:ital,wght@1,600&family=Permanent+Marker&family=VT323&display=swap');
 
 
 * {
@@ -5,5 +6,35 @@
 }
 
 body {
-    background-color: #8cd49f
+    background-color: #8cd49f;
+    font-family: "VT323", monospace;
+    font-weight: 400;
+    font-style: normal;
+    height: 100vh;
+    overflow: hidden;
+    text-align: center;
+}
+
+.choose-insect-btn img {
+    height: 100px;
+    width: 100px;
+    object-fit: contain;
+}
+
+.screen {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn {
+    border: 0;
+    background-color: white;
+    color: #8cd49f;
+    padding: 15px 20px;
+    cursor: pointer;
+
 }
