Tue, Apr 9, 2024, 2:32 PM -07:00

--- a/css/insect.css
+++ b/css/insect.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Kosugi&family=Montserrat:ital,wght@1,600&family=Permanent+Marker&family=VT323&display=swap');
 
-
 * {
     box-sizing: border-box;
 }
@@ -41,4 +40,8 @@ body {
 
 .btn:hover {
     opacity: 0.8;
+}
+
+.screen.up {
+    margin-top: -100vh;
 }
