--- a/css/insect.css
+++ b/css/insect.css
@@ -53,3 +53,36 @@ a {
 h1 {
     line-height: 1.4;
 }
+
+.insects-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    justify-content: center;
+    padding: 0;
+}
+
+.insects-list li {
+    margin: 5px;
+}
+
+.choose-insect-btn {
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    border-radius: 7px;
+    cursor: pointer;
+    font-family: inherit;
+    width: 125px;
+    height: 150px;
+}
+
+.choose-insect-btn:hover {
+    background-color: white;
+    color: #8cd49f;
+    transition: ease-in-out .5s;
+}
+
+.choose-insect-btn:active {
+    background-color: rgba(255, 255, 255, 0.7);
+}
