--- a/css/insect.css
+++ b/css/insect.css
@@ -43,7 +43,7 @@ body {
 }
 
 .screen.up {
-    margin-top: -100vh;
+    margin-top: -200vh;
 }
 
 a {
@@ -75,6 +75,7 @@ h1 {
     font-family: inherit;
     width: 125px;
     height: 150px;
+    font-size: 20px;
 }
 
 .choose-insect-btn:hover {
@@ -85,4 +86,63 @@ h1 {
 
 .choose-insect-btn:active {
     background-color: rgba(255, 255, 255, 0.7);
+}
+
+.game-container {
+    position: relative;
+    font-size: 30px;
+}
+
+.time {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: white;
+    letter-spacing: 2px;
+}
+
+.score {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: white;
+    letter-spacing: 2px;
+}
+
+.message {
+    line-height: 1.7;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    color: white;
+    letter-spacing: 2px;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -150%);
+    transition: 0.4s ease-in;
+}
+
+.message.visible {
+    transform: translate(-50%, 150%);
+}
+
+.insect {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 500px;
+    left: 200px;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.insect img {
+    width: 100px;
+    height: 100px;
 }
