--- a/css/insect.css
+++ b/css/insect.css
@@ -122,7 +122,7 @@ h1 {
     top: 0;
     left: 50%;
     transform: translate(-50%, -150%);
-    transition: 0.4s ease-in;
+    transition: transform 0.4s ease-in;
 }
 
 .message.visible {
@@ -140,6 +140,11 @@ h1 {
     top: 500px;
     left: 200px;
     transform: translate(-50%, -50%) scale(1);
+    transition: transform 0.4s ease-in-out;
+}
+
+.insect.caught {
+    transform: translate(-50%, -50%) scale(0);
 }
 
 .insect img {
