Tue, Apr 9, 2024, 2:59 PM -07:00

--- a/css/insect.css
+++ b/css/insect.css
@@ -43,7 +43,7 @@ body {
 }
 
 .screen.up {
-    margin-top: -200vh;
+    /* margin-top: -200vh; */
 }
 
 a {
@@ -137,8 +137,6 @@ h1 {
     width: 100px;
     height: 100px;
     position: absolute;
-    top: 500px;
-    left: 200px;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 0.4s ease-in-out;
 }
