Thu, Apr 11, 2024, 1:42 PM -07:00

--- a/css/insect.css
+++ b/css/insect.css
@@ -27,6 +27,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: margin 0.5s ease-in;
 }
 
 .btn {
@@ -126,6 +127,7 @@ h1 {
 }
 
 .message.visible {
+    opacity: 1;
     transform: translate(-50%, 150%);
 }
 
