--- a/css/insect.css
+++ b/css/insect.css
@@ -124,6 +124,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -150%);
     transition: transform 0.4s ease-in;
+    opacity: 0;
 }
 
 .message.visible {
