--- a/css/insect.css
+++ b/css/insect.css
@@ -120,7 +120,7 @@ h1 {
     padding: 20px;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 50%;
     transform: translate(-50%, -150%);
     transition: transform 0.4s ease-in;
