--- a/css/hangman.css
+++ b/css/hangman.css
@@ -1,7 +1,12 @@
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #1d84b8;
     color: #ffffff;
+    font-family: 
 }
 
 .figure-container {
