--- a/css/hangman.css
+++ b/css/hangman.css
@@ -27,6 +27,9 @@ h1 {
 .game-container {
     padding: 20px 30px;
     position: relative;
+    margin: auto;
+    height: 350px;
+    width: 400px;
 }
 
 .figure-container {
@@ -38,4 +41,40 @@ h1 {
 
 .figure-part {
     display: none;
+}
+
+.wrong-letters-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+}
+
+.wrong-letters-container p {
+    margin: 0 0 5px;
+}
+
+.wrong-letters-container span {
+    font-size: 25px;
+}
+
+.word {
+    display: flex;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.letter {
+    font-size: 30px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 20px;
+    margin: 0 3px;
+    border-bottom: 3px solid #78c470
 }
