Thu, Apr 18, 2024, 2:37 PM -07:00

--- a/css/hangman.css
+++ b/css/hangman.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Jacquard+24&family=Kosugi&family=Montserrat:ital,wght@1,600&family=Permanent+Marker&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Griffy&family=Jacquard+24&family=Kosugi&family=Montserrat:ital,wght@1,600&family=Permanent+Marker&family=VT323&display=swap');
 
 * {
     box-sizing: border-box;
