--- a/css/hangman.css
+++ b/css/hangman.css
@@ -7,8 +7,8 @@
 body {
     background-color: #1d84b8;
     color: #ffffff;
-    font-family: "Jacquard 24", system-ui;
-    font-weight: 200;
+    font-family: "Griffy", system-ui;
+    font-weight: 400;
     font-style: normal;
     display: flex;
     flex-direction: column;
