--- a/css/hangman.css
+++ b/css/hangman.css
@@ -78,3 +78,57 @@ h1 {
     margin: 0 3px;
     border-bottom: 3px solid #78c470
 }
+
+.popup-container {
+    background-color: rgba(0,0,0,0.3);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /* display: flex; */
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.popup {
+    background: #5eaec4;
+    border-radius: 5px;
+    box-shadow: 0 10px 20px 3px #4695ab;
+    padding: 20px;
+    text-align: center;
+}
+
+.popup button {
+    cursor: pointer;
+    background-color: white;
+    color: #5eaec4;
+    margin-top: 20px;
+    padding: 12px 20px;
+    font-size: 19px;
+    font-family: "Griffy", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.popup button:active {
+    transform: scale(0.96);
+}
+
+.notification-container {
+    background-color: rgba(0,0,0,0.3);
+    padding: 15px 20px;
+    border-radius: 10px 10px 0 0;
+    position: absolute;
+    bottom: -50px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.notification-container p {
+    margin: 0;
+}
+
+.notification-container .show {
+    transform: translateY(-50px);
+}
